Change description, add get in touch

--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,13 @@
 locale: "en-US"
-title: Strata # Title of your site
+title: CogSys ML Talks # Title of your site
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 baseurl: "" # the subpath of your site, e.g. /blog/
 google_analytics_key: ""
 
 # Default description in social shares for the jekyll-seo-tag gem
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-
+  Talks on various machine learning topics organized by the Section for Cognitive Systems at the
+  Technical University of Denmark (DTU).
 # Author details for the jekyll-seo-tag gem
 author:
   name: Your Name
