--- a/_data/social.yml
+++ b/_data/social.yml
@@ -1,8 +1,8 @@
-- name: Facebook
-  link: 'https://www.facebook.com/comfusionllc'
-  social_icon: Facebook
+- name: Twitter
+  link: 'https://twitter.com/cogsys?lang=en'
+  social_icon: Twitter
   new_window: true
-- name: RSS
-  link: '/feed.xml'
-  social_icon: RSS
-  new_window: true
+# - name: RSS
+#   link: '/feed.xml'
+#   social_icon: RSS
+#   new_window: true
