--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 locale: "en-US"
 title: CogSys ML Talks # Title of your site
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+url: "https://cogsystalks.github.io/" # the base hostname & protocol for your site
 baseurl: "" # the subpath of your site, e.g. /blog/
 google_analytics_key: ""
 
@@ -10,8 +10,8 @@ description: > # this means to ignore newlines until "baseurl:"
   Technical University of Denmark (DTU).
 # Author details for the jekyll-seo-tag gem
 author:
-  name: Your Name
-  email: your-email@domain.com
+  name: Cogsys Talks
+  email: cogsystalks@gmail.com
   twitter: # twitter username without the @ symbol
 
 # Social details for the jekyll-seo-tag gem
