update for the new semester

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ description: > # this means to ignore newlines until "baseurl:"
 # Author details for the jekyll-seo-tag gem
 author:
   name: Cogsys Talks
-  email: cogsystalks@gmail.com
+  email: alpu@dtu.dk
   twitter: # twitter username without the @ symbol
 
 # Social details for the jekyll-seo-tag gem
